packages/cdc-react/src/scss/global.scss
@import "colors";
@import "typography";
@import "palettes";
@import "mixins";

*,
html,
body {
  font-size: 17px;
  box-sizing: border-box;
  font-family: "Open Sans-Regular", Helvetica;
  letter-spacing: 0.1rem;
  font-weight: 520;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

h1 {
  font-size: $font-size-h1;
}

h2 {
  font-size: $font-size-h2;
}

h3 {
  font-size: $font-size-h3;
}

h4 {
  font-size: $font-size-h4;
}

h5 {
  font-size: $font-size-h5;
}

.cdc-react {
  .sr-only {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
  }
}

